fix(Settings): fix cropped descenders of letters

--- a/src/views/Me/Settings/Settings/Account/styles.css
+++ b/src/views/Me/Settings/Settings/Account/styles.css
@@ -5,5 +5,8 @@
 .email-text {
   @mixin line-clamp;
 
+  /* FIXME: fix cropped descenders of letters  */
+  padding-bottom: 0.12em;
   padding-left: var(--spacing-base);
+  margin-bottom: -0.12rem;
 }
